--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Launch cli",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}/mock/tcp_conn_cli_mock/tcp_conn_cli_mock.go"
+        },
+    
+     {
+            "name": "Launch srv",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "program": "${workspaceFolder}/mock/tcp_conn_srv_mock/tcp_conn_srv_mock.go"
+        },
+    
     {
         "name": "Launch file",
         "type": "go",
