--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Launch cli",
             "type": "go",
@@ -25,7 +26,10 @@
         "type": "go",
         "request": "launch",
         "mode": "debug",
-        "program": "${file}"
+        "program": "${file}",
+        "env": {
+                "LD_LIBRARY_PATH": "${workspaceFolder}/data/rtdb/lib_agilor"
+            }
     },
     {
         "name": "Launch Package",
